# rakuten-mlops

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  ONBOARDING.md  docker-compose.yml  pyproject.toml
core/: params.yaml  requirements.txt
core/artifacts/: class_weights.json  history.json  labels_map.json  metrics.json
core/src/: params.yaml
core/src/data/: build_features.py  clean_data.py  utils.py
core/src/models/: evaluate.py  train.py
core/src/utils/: loaders.py
infra/docker/: Dockerfile.api
services/api/: README.md  config.py  main.py  requirements.txt
services/api/monitoring/: health.py
services/api/routes/: auth.py  predict.py  train.py
services/api/schemas/: auth.py  inference.py  training.py
services/api/services/: auth.py  predictor.py  stub_predictor.py  stub_training.py  training.py
tests/api/: conftest.py  test_auth.py  test_predictor.py  test_routes_predict.py  test_routes_train.py  test_training_service.py
