[project]
name = "rakuten"
description = "MLOps for Rakuten product classification"
version = "0.1.0"
requires-python = "==3.12.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
api = [
    "fastapi>=0.135.2",
    "joblib>=1.4.2",
    "numpy>=2.2.0",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.42.0",
]
test = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
core = [
    "keras>=3.13.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "python-box>=7.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "tensorflow>=2.21.0",
]
