[project]
name = "rakuten"
description = "MLOps for Rakuten product classification"
version = "0.1.0"
requires-python = "==3.12.12"
dependencies = []

[dependency-groups]
api = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
]
core = [
    "keras>=3.13.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "python-box>=7.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "tensorflow>=2.21.0",
]
